# utf-tech

./: Makefile  README.md  db.sqlite3  pyproject.toml
tests/check_date/: check_date.json
utf_tech/: asgi.py  settings.py  urls.py  wsgi.py
utf_tech/menu/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
utf_tech/menu/migrations/: 0001_initial.py
